new code is now added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
     "react": "^18",
