--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5"
