--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "animate.css": "^4.1.1",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
+    "@gsap/react": "^2.1.1",
+    "gsap": "^3.12.5",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
